--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
-		<script src="./script.js"></script>
-		<script src="./balance.js"></script>
+		<script src="./assets/js/scripts.js"></script>
+		<!-- <script src="./balance.js"></script> -->
 	</body>
 </html>
