--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 		<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
+		<main>
+			parent
+			<form action="">
+				form
+				<input type="text" name="description" id="description" />
+				controls
+			</form>
+		</main>
+
 		<script src="./assets/js/scripts.js"></script>
 		<script src="./assets/js/home.js"></script>
 	</body>
